crates/wac-parser/tests/resolution/fail/export-conflict-alias.wac
package test:comp;

import f with "x": func();

type x = u32;

export f;
